--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,18 @@
-.app{
+.app {
   font: sans-serif;
   text-align: center;
+}
+
+.ml {
+  margin-right: 5px;
+}
+
+.otpInput {
+  width: 40px;
+  height: 40px;
+  margin: 5px;
+  font-size: 1.2em;
+  text-align: center;
+  border: 1px solid grey;
+  border-radius: 8px;
 }
